--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -32,8 +32,8 @@
               <ul class="list-unstyled">
                 <li>InstallationPath: {{lb.installationPath}}</li>
                 <li>Host: {{lb.host}}</li>
-                <li>Port: {{lb.publicPort}}</li>
-                <li>Stats page: <a href="http://{{lb.host}}:{{lb.publicPort+1}}/proxy-stats">{{lb.host}}:{{lb.publicPort+1}}/proxy-stats</a>
+                <li>Port: {{lb.statsPort}}</li>
+                <li>Stats page: <a href="http://{{lb.host}}:{{lb.statsPort+1}}/proxy-stats">{{lb.host}}:{{lb.statsPort+1}}/proxy-stats</a>
                 </li>
               </ul>
             </div>
