--- a/gateway-app/src/main/resources/web/gateway/appInst.html
+++ b/gateway-app/src/main/resources/web/gateway/appInst.html
@@ -21,11 +21,28 @@
     <button class="btn btn-info" data-toggle="modal" data-target="#myModal"><span
         class="glyphicon glyphicon-pencil"></span> Edit
     </button>
-    <button type="button" class="btn btn-danger" ng-click="deleteAppInst()"><span
+    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteAppInstWarningModal"><span
         class="glyphicon glyphicon-trash"></span> Delete
     </button>
 
   </ul>
+</div>
+
+<div class="modal" id="deleteAppInstWarningModal" tabindex="-1" role="dialog" aria-labelledby="myModalWarningLabel"
+     aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        Are you sure you want to delete?
+        <button type="button" class="btn btn-info" data-dismiss="modal" ng-click="deleteAppInst()">
+          Yes
+        </button>
+        <button type="button" class="btn btn-danger" data-dismiss="modal">
+          Cancel
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
