Showing haproxy status for instance

--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -82,7 +82,7 @@
 
         <div ng-repeat="a in app.applicationInstances | filter:appInstId">
           <a class="btn btn-default btn-sm pull-right col-md-1"
-             href="http://{{a.host}}:{{a.port}}{{app.checkPath}}">Visit</a>
+             href="http://{{a.server}}">Visit</a>
         </div>
       </div>
       <hr>
