Loadbalancer host was hardcoded. fix. Changed input description for path

--- a/gateway-app/src/main/resources/web/gateway/lbform.html
+++ b/gateway-app/src/main/resources/web/gateway/lbform.html
@@ -16,7 +16,7 @@
                placeholder="Enter host">
     </div>
     <div class="form-group">
-        <label for="inLbHost">Installation Path</label>
+        <label for="inLbHost">Path to a folder to store config files (Must exists on the server)</label>
         <input type="text" ng-model="lb.installationPath" class="form-control " id="inLbPath" name="lbPath" ng-pattern="/^/[a-zA-Z]+/"
                required
                placeholder="Enter path">
