Loadbalancer host was hardcoded. fix. 3

--- a/gateway-app/src/main/resources/web/gateway/loadBalancer.html
+++ b/gateway-app/src/main/resources/web/gateway/loadBalancer.html
@@ -49,7 +49,7 @@
                 <li>InstallationPath: {{lb.installationPath}}</li>
                 <li>Host: {{lb.host}}</li>
                 <li>Port: {{lb.statsPort}}</li>
-                <li>Stats page: <a href="http://{{lb.host}}:{{lb.statsPort+1}}/proxy-stats">{{lb.host}}:{{lb.statsPort+1}}/proxy-stats</a>
+                <li>Stats page: <a href="http://{{lb.host}}:{{lb.statsPort}}/proxy-stats">{{lb.host}}:{{lb.statsPort}}/proxy-stats</a>
                 </li>
               </ul>
             </div>
