--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -287,13 +287,21 @@
                            placeholder="Enter public url">
                     <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
                 </div>
-                <div class="form-group">
-                    <label for="inAppEmails2">Emails (for notification). Separate by ,</label>
-                    <input type="text" ng-model="newApp.emails" class="form-control " id="inAppEmails2"
-                           name="emails"
-                           required
-                           placeholder="Enter email(s)">
+
+                <label>Emails</label>
+                <div class="row form-group" data-ng-repeat = "mail in emailFields">
+                  <a ng-show="showNewMailField(mail)" ng-click="addMailField()" class="btn btn-info"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                  <a ng-show="showNewMailField(mail)" ng-click="removeMailField()" class="btn btn-info"><span class="glyphicon glyphicon-minus-sign"></span></a>
+                  <div class="col-xs-2">
+
+                  <input type="text"
+                         ng-model="mail.name"
+                         name=""
+                         placeholder="Enter email-adress"
+                         class = "form-control">
+
                 </div>
+              </div>
                 <div class="form-group">
                     <label for="inAppCheckPath2">Check path</label>
                     <input type="text" ng-model="newApp.checkPath" class="form-control "
